# stated_dialogues

./: Cargo.toml
.github/workflows/: check.yml
src/controller/: handler.rs  mod.rs  teloxide.rs  ttl.rs
src/dialogues/: mod.rs
