[package]
name = "stated_dialogues"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
tracing = "0.1"
teloxide = { version = "0.12.2", features = ["macros"], optional = true }
tokio = { version = "1.35.1", features = ["macros", "sync", "time"] }

[features]
teloxide-adapter = ["dep:teloxide"]
